fix: swagger doc
